test/Fail/NotInScope.err
NotInScope.agda:9.7-26: error: [NoParseForApplication]
Could not parse the application if x thenn x else x
Operators used in the grammar:
  None
when scope checking if x thenn x else x
